# office-space-db

./: .gitignore  UPLOAD_INTEGRATION_SUMMARY.md  readme.md  requirements.txt
config/: .env.example  config.py
data/: metadata.json
src/: sensor_service.py
src/visualization/: __init__.py  clear_bucket.py  cloudflare_service.py  color_schemes.py  data_service.py  generator.py  helpers.py  migrate_to_sqlite.py  service.py  sqlite_service.py  utils.py
src/visualization_v2/: .gitignore  README.md  SUMMARY.md  __init__.py  pyproject.toml
src/visualization_v2/cli/: __init__.py  main.py
src/visualization_v2/core/: __init__.py  processor.py  progress.py  service.py  timezone_utils.py
src/visualization_v2/data/: __init__.py  cache.py  repository.py  sync.py
src/visualization_v2/generators/: __init__.py  base.py  colors.py  heatmap.py
src/visualization_v2/models/: __init__.py  config.py  sensor.py  visualization.py
src/visualization_v2/upload/: __init__.py  cloudflare_kv.py  demo.py  manager.py  pinata.py
systemd/: sensor-service.service
